# pr-impact-analyzer

./: README.md  impact_report.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
pr_impact_analyzer/: __init__.py  api_mapper.py  cli.py  dep_graph.py  git_diff.py  impact_mapper.py  report_generator.py  utils.py
pr_impact_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_git_diff.py
